# bitwise_packable

./: Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml  deploy.yml  manual_deploy.yml
.run/: Test bitpack.run.xml  Test bitval.run.xml
bitpack/: Cargo.toml  README.md
bitpack/src/: lib.rs
bitpack/tests/: mod.rs
bitval/: Cargo.toml  README.md
bitval/src/: lib.rs
bitval/tests/: mod.rs
rbitpack/: Cargo.toml  README.md
rbitpack/src/: lib.rs
rbitpack/tests/: mod.rs
